<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WHS Schedule</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="time_prompt">The time is: </string>
    <string name="time_left">Time left in class: </string>
    <string name="current_period_prompt">Current class: </string>
    <string name="next_period">Next class: </string>
    <string name="next_class_time">Next class at: </string>
    <string name="class_name_prompt">Class Name/Period</string>
    <string name="begin_time">Begin Time</string>
    <string name="end_time">End Time</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="setup_daily">View/Change Daily Schedules</string>
    
    <string-array name="current_period">
        <item>It is currently zero period</item>
        <item>It is currently 1st period</item>
        <item>It is currently 2nd period</item>
        <item>It is currently 3rd period</item>
        <item>It is currently 4th period</item>
        <item>It is currently 5th period</item>
        <item>It is currently 6th period</item>
    </string-array>
    <string-array name="next_period">
        <item>1st period is next</item>
        <item>2nd period is next</item>
        <item>3rd period is next</item>
        <item>4th period is next</item>
        <item>5th period is next</item>
        <item>6th period is next</item>
        <item>School is out!</item>
    </string-array>

    <string name="update_button_text">Update</string>

    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="school_meets">School Meets</string>
    <string name="school_meets_summary">School is in session on this day</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="title_activity_settings">Schedule Settings</string>
    <string name="title_activity_class_list">Class List</string>
    <string name="monday_schedule_setup">Setup Monday Schedule</string>
    <string name="tuesday_schedule_setup">Setup Tuesday Schedule</string>
    <string name="wednesday_schedule_setup">Setup Wednesday Schedule</string>
    <string name="thursday_schedule_setup">Setup Thursday Schedule</string>
    <string name="friday_schedule_setup">Setup Friday Schedule</string>
    <string name="saturday_schedule_setup">Setup Saturday Schedule</string>
    <string name="sunday_schedule_setup">Setup Sunday Schedule</string>
    <string name="title_activity_class_details">Class Details</string>

</resources>
