<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/class_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_name_prompt" />

    <EditText
        android:id="@+id/class_name_text_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/class_name"
        android:ems="10" />

    <TextView
        android:id="@+id/begin_time_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/class_name_text_edit"
        android:layout_marginTop="16dp"
        android:text="@string/begin_time" />

    <Button
        android:id="@+id/begin_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/begin_time_prompt"
        android:onClick="showTimePickerDialog"
        android:text="12:00 am" />
    
    <TextView
        android:id="@+id/end_time_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/begin_time_button"
        android:layout_marginTop="21dp"
        android:text="@string/end_time" />

    <Button
        android:id="@+id/end_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/end_time_prompt"
        android:onClick="showTimePickerDialog"
        android:text="12:01 am" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/end_time_button"
        android:layout_marginTop="20dp"
        android:onClick="addButtonPressed"
        android:text="@string/add" />
    
</RelativeLayout>
