<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.whsschedule.MainActivity" >

    <TextView
        android:id="@+id/day_of_week"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="Today"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/current_class_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/day_of_week"
        android:layout_below="@+id/day_of_week"
        android:layout_marginTop="10dp"
        android:text="@string/current_period_prompt" />
    
    <TextView
        android:id="@+id/current_period_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/current_class_prompt"
        android:layout_alignRight="@+id/day_of_week"
        android:text="current_period_placeholder" />

    <TextView
        android:id="@+id/time_left_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/day_of_week"
        android:layout_below="@+id/current_class_prompt"
        android:layout_marginTop="10dp"
        android:text="@string/time_left" />
    
    <TextView
        android:id="@+id/time_left_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/time_left_prompt"
        android:layout_alignBottom="@+id/time_left_prompt"
        android:layout_alignRight="@+id/day_of_week"
        android:text="time_left_placeholder" />

    <TextView
        android:id="@+id/next_class_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/day_of_week"
        android:layout_below="@+id/time_left_prompt"
        android:layout_marginTop="10dp"
        android:text="@string/next_period" />
    
    <TextView
        android:id="@+id/next_period_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/next_class_prompt"
        android:layout_alignBottom="@+id/next_class_prompt"
        android:layout_alignRight="@+id/day_of_week"
        android:text="next_period_placeholder" />

    <TextView
        android:id="@+id/next_begins_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/day_of_week"
        android:layout_below="@+id/next_class_prompt"
        android:layout_marginTop="10dp"
        android:text="@string/next_class_time" />

    <TextView
        android:id="@+id/next_time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/next_begins_prompt"
        android:layout_alignBottom="@+id/next_begins_prompt"
        android:layout_alignRight="@+id/day_of_week"
        android:text="next_time" />

    <DigitalClock
        android:id="@+id/digitalClock1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_below="@+id/analogClock1"
        android:layout_centerHorizontal="true"
        android:text="DigitalClock" />

    <AnalogClock
        android:id="@+id/analogClock1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/next_begins_prompt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp" />


</RelativeLayout>
